--- a/www/index.html
+++ b/www/index.html
@@ -137,41 +137,19 @@
                                 <div class="pull-to-refresh-arrow"></div>
                             </div>
                             <br/><br/>
-                            <div class="row no-gutter">
+                            <span class="row no-gutter">
                                 <div class="list-block cards-list col-50 tablet-33">
                                     <ul>
                                         <li class="card swipeout">
                                             <div class="swipeout-content">
-                                                <div class="card-header">2015 F1 Pen Set</div>
+                                                <div class="card-header">BYND Artisan Book Jacket</div>
                                                 <div class="card-content">
                                                     <div class="card-content-inner">
-                                                        <img src="img/krisair/f1collectibles/pen.jpg" style="width: 100%"/>
-                                                        2 minutes ago
+                                                        <img src="img/krisair/sg50/bynd.jpg" style="width: 100%"/>
+                                                        5 minutes ago
                                                     </div>
                                                 </div>
-                                                <div class="card-footer"><div>Seat 25A</div><div class="color-green">Paid via MasterPass</div></div>
-                                            </div>
-                                            <div class="swipeout-actions-right">
-                                                <a href="#" class="bg-indigo swipeout-delete">Fulfilled</a>
-                                            </div>
-                                            <div class="swipeout-actions-left">
-                                                <a href="#" class="bg-orange swipeout-delete">Cancel</a>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="list-block cards-list col-50 tablet-33">
-                                    <ul>
-                                        <li class="card swipeout">
-                                            <div class="swipeout-content">
-                                                <div class="card-header">2015 F1 Racing Car Earpiece</div>
-                                                <div class="card-content">
-                                                    <div class="card-content-inner">
-                                                        <img src="img/krisair/f1collectibles/earpiece.jpg" style="width: 100%"/>
-                                                        4 minutes ago
-                                                    </div>
-                                                </div>
-                                                <div class="card-footer"><div>Seat 25A</div><div class="color-orange">$32 Unpaid</div></div>
+                                                <div class="card-footer"><div>Seat 12C</div><div class="color-orange">$128 Unpaid</div></div>
                                             </div>
                                             <div class="swipeout-actions-right">
                                                 <a href="#" class="bg-indigo swipeout-delete">Fulfilled</a>
@@ -208,27 +186,47 @@
                                     <ul>
                                         <li class="card swipeout">
                                             <div class="swipeout-content">
-                                                <div class="card-header">Pillow</div>
+                                                <div class="card-header">Hagen Dazs Cookies & Cream</div>
                                                 <div class="card-content">
                                                     <div class="card-content-inner">
-                                                        <img src="img/inflightservice/amenities/pillow.jpg" style="width: 100%;"/>
-                                                        1 minutes ago
-                                                    </div>
+                                                        <img src="img/inflightservice/food/icecream.jpg" style="width: 100%;" />1 minute ago</div>
                                                 </div>
-                                                <div class="card-footer"><div>Seat 35D</div><div>Free</div></div>
+                                                <div class="card-footer">
+                                                    <div>Seat 25A</div>
+                                                    <div>Free</div>
+                                                </div>
                                             </div>
-                                            <div class="swipeout-actions-right">
-                                                <a href="#" class="bg-indigo swipeout-delete dismiss-prompt">Fulfilled</a>
+                                            <div class="swipeout-actions-right"> <a href="#" class="bg-indigo swipeout-delete">Fulfilled</a> 
                                             </div>
-                                            <div class="swipeout-actions-left">
-                                                <a href="#" class="bg-orange swipeout-delete">Cancel</a>
+                                            <div class="swipeout-actions-left"> <a href="#" class="bg-orange swipeout-delete">Cancel</a> 
                                             </div>
                                         </li>
                                     </ul>
                                 </div>
-                                <test></test>
-                            </div>
-                            <div class="content-block-title">Vision</div>
+                                <div class="list-block cards-list col-50 tablet-33">
+                                    <ul>
+                                        <li class="card swipeout">
+                                            <div class="swipeout-content">
+                                                <div class="card-header">Blanket</div>
+                                                <div class="card-content">
+                                                    <div class="card-content-inner">
+                                                        <img src="img/inflightservice/amenities/blanket.jpg" style="width: 100%;" />1 minute ago</div>
+                                                </div>
+                                                <div class="card-footer">
+                                                    <div>Seat 25A</div>
+                                                    <div>Free</div>
+                                                </div>
+                                            </div>
+                                            <div class="swipeout-actions-right"> <a href="#" class="bg-indigo swipeout-delete">Fulfilled</a> 
+                                            </div>
+                                            <div class="swipeout-actions-left"> <a href="#" class="bg-orange swipeout-delete">Cancel</a> 
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                                
+                            </span>
+                            <div class="content-block-title">Service Statement</div>
                             <div class="content-block">
                                 <div class="content-block-inner">
                                     <p>Singapore Airlines has a responsibility not only to be an excellent company, but also to be an excellent citizen of the world by enhancing the lives of the people we touch.</p>
