--- a/www/krisair_f1collectibles_detail.html
+++ b/www/krisair_f1collectibles_detail.html
@@ -23,14 +23,14 @@
                         <div class="item-inner">
                             <div class="item-title-row">
                                 <div class="item-title">2015 F1 Beary Ambassador</div>
-                                <div class="item-after">$39</div>
+                                <div class="item-after">Quantity:&nbsp;<div id="qty1">5</div></div>
                             </div>
                             <div class="item-subtitle">Plushie</div>
                             <div class="item-text">Our 2015 F1 edition Beary Ambassador decked out in a sporty visor and SIA pit crew overalls. </div>
                         </div>
                     </a>
-                    <div class="swipeout-actions-left"><a href="#" class="bg-blue">Set Stock Alert</a></div>
-                    <div class="swipeout-actions-right"><a href="#" class="decrease-qty">Decrease Stock -</a><a href="#" class="update-qty bg-green">Update</a><a href="#" class="increase-qty bg-orange">Increase Stock +</a></div>
+                    <div class="swipeout-actions-left"><a href="#" class="stock-alert1 bg-blue">Set Stock Alert</a></div>
+                    <div class="swipeout-actions-right"><a href="#" class="decrease-qty1">Decrease Stock -</a><a href="#" class="update-qty1 bg-green">Update</a><a href="#" class="increase-qty1 bg-orange">Increase Stock +</a></div>
                 </li>                
                 <li class="swipeout">    
                     <a href="krisair_generic_item_detail.html" data-panel="right" class="item-link item-content swipeout-content">
@@ -39,13 +39,13 @@
                         <div class="item-inner">
                             <div class="item-title-row">
                                 <div class="item-title">2015 F1 Foldable Water Bottle Set</div>
-                                <div class="item-after">$17</div>
+                                <div class="item-after">Quantity:&nbsp;<div id="qty2">5</div></div>
                             </div>
                             <div class="item-subtitle">Sports & Fitness</div>
                             <div class="item-text">Look and stay cool with the handy foldable water bottle. Set comes with one blue and one yellow bottle. Made from PET/PA/PE - BPA Free material.</div>
                         </div>
                     </a>
-                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
+                    <div class="swipeout-actions-right"><a href="#" class="decrease-qty2">Decrease Stock -</a><a href="#" class="update-qty2 bg-green">Update</a><a href="#" class="increase-qty2 bg-orange">Increase Stock +</a></div>
                 </li>
                 <li class="swipeout">
                     <a href="krisair_f1collectibles_earpiece.html" data-panel="right" class="item-link item-content swipeout-content">
@@ -54,13 +54,13 @@
                         <div class="item-inner">
                             <div class="item-title-row">
                                 <div class="item-title">2015 F1 Racing Car Earpiece</div>
-                                <div class="item-after">$32</div>
+                                <div class="item-after">Quantity:&nbsp;<div id="qty3">5</div></div>
                             </div>
                             <div class="item-subtitle">Electronics</div>
                             <div class="item-text">Packed in a handy hard-case zipper pouch, this pair of lightweight racing car earphones will make a perfect gift for racing fanatics.</div>
                         </div>
                     </a>
-                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
+                    <div class="swipeout-actions-right"><a href="#" class="decrease-qty3">Decrease Stock -</a><a href="#" class="update-qty3 bg-green">Update</a><a href="#" class="increase-qty3 bg-orange">Increase Stock +</a></div>
                 </li>
                 <li class="swipeout">
                     <a href="krisair_f1collectibles_pen.html" data-panel="right" class="item-link item-content swipeout-content">
@@ -69,13 +69,13 @@
                         <div class="item-inner">
                             <div class="item-title-row">
                                 <div class="item-title">2015 F1 Pen Set</div>
-                                <div class="item-after">$20</div>
+                                <div class="item-after">Quantity:&nbsp;<div id="qty4">5</div></div>
                             </div>
                             <div class="item-subtitle">Office Products</div>
                             <div class="item-text">Fitted with the Singapore Airlines aircraft-shaped clip, this gift set of five ballpoint pens provides comfortable writing with a black rubber grip. </div>
                         </div>
                     </a>
-                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
+                    <div class="swipeout-actions-right"><a href="#" class="decrease-qty4">Decrease Stock -</a><a href="#" class="update-qty4 bg-green">Update</a><a href="#" class="increase-qty4 bg-orange">Increase Stock +</a></div>
                 </li>     
                 <li class="swipeout">                  
                     <a href="krisair_generic_item_detail.html" data-panel="right" class="item-link item-content swipeout-content">
@@ -84,13 +84,13 @@
                         <div class="item-inner">
                             <div class="item-title-row">
                                 <div class="item-title">2015 F1 Polo Shirt</div>
-                                <div class="item-after">$70</div>
+                                <div class="item-after">Quantity:&nbsp;<div id="qty5">5</div></div>
                             </div>
                             <div class="item-subtitle">Fashion</div>
                             <div class="item-text">Get set for the event in our sporty Dri-Fit 2015 F1 Polo Tee bearing the 2015 Formula 1 Singapore Airlines Singapore Grand Prix logo, complete with details such the Marina bay circuit outline, the embroidered Singapore</div>
                         </div>
                     </a>
-                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
+                    <div class="swipeout-actions-right"><a href="#" class="decrease-qty5">Decrease Stock -</a><a href="#" class="update-qty5 bg-green">Update</a><a href="#" class="increase-qty5 bg-orange">Increase Stock +</a></div>
                 </li> 
                 <li class="swipeout">          
                     <a href="krisair_generic_item_detail.html" data-panel="right" class="item-link item-content swipeout-content">
@@ -99,13 +99,13 @@
                         <div class="item-inner">
                             <div class="item-title-row">
                                 <div class="item-title">2015 F1 Magnet Set</div>
-                                <div class="item-after">$20</div>
+                                <div class="item-after">Quantity:&nbsp;<div id="qty6">5</div></div>
                             </div>
                             <div class="item-subtitle">Office Products</div>
                             <div class="item-text">A wonderful 3-piece magnet gift set to commemorate this spectacular racing event.</div>
                         </div>
                     </a>
-                    <div class="swipeout-actions-right"><a href="#" class="swipeout-content inflight-order-prompt bg-orange">Add to Cart</a></div>
+                    <div class="swipeout-actions-right"><a href="#" class="decrease-qty6">Decrease Stock -</a><a href="#" class="update-qty6 bg-green">Update</a><a href="#" class="increase-qty6 bg-orange">Increase Stock +</a></div>
                 </li> 
             </ul>
         </div>
