--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="css/font-awesome.min.css">
         <link rel="stylesheet" href="css/my-app.css">
         <link rel="icon" href="img/icon.png">
+        <script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
+
     </head>
     <body>
         <!-- Status bar overlay for fullscreen mode-->
@@ -224,7 +226,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                
+
                             </span>
                             <div class="content-block-title">Service Statement</div>
                             <div class="content-block">
